# ffp_tum

./: .gitignore  CMakeLists.txt  README.md  SIR_model.md
include/: Box.hpp  GUI.hpp  HealthState.hpp  InfectedPerson.hpp  InputHandler.hpp  Model.hpp  Person.hpp  RecoveredPerson.hpp  SusceptiblePerson.hpp  Virus.hpp  main.hpp  randomGenerator.hpp
src/: Box.cpp  GUI.cpp  InfectedPerson.cpp  Model.cpp  Person.cpp  RecoveredPerson.cpp  SusceptiblePerson.cpp  Virus.cpp  main.cpp  randomGenerator.cpp
